# OpenMaji

./: Cargo.toml  LICENSE  README.md  config.toml  shell.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  shell.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/drivers/: ata.rs
src/fs/: disk.rs  mem.rs  mod.rs
src/process/: mod.rs  scheduler.rs
src/task/: executor.rs  keyboard.rs  mod.rs  timer.rs
